--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export && next-image-export-optimizer",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-image-export-optimizer": "^0.9.6",
+    "next-seo": "^5.4.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "eslint-plugin-react": "^7.29.4"
   }
 }
