--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "glob": "^8.0.3",
+    "gray-matter": "^4.0.3",
     "next": "12.2.0",
     "next-image-export-optimizer": "^0.10.1",
+    "next-mdx-remote": "^4.0.3",
     "next-seo": "^5.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-highlight": "^5.0.2",
+    "rehype-slug": "^5.0.1",
     "sass": "^1.52.2"
   },
   "devDependencies": {
