User `pnpm` in workflows

--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -25,13 +25,13 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
 
       - name: Export
-        run: npm run export
+        run: pnpm run export
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
